--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script>
     const terminal = document.getElementById('terminal');
-    const preHeader = `        __                          __             __                          
+    const preHeader = `        
+            __                          __             __                          
        /\ \                        /\ \__         /\ \                         
- _____ \ \ \___       __       ___ \ \ ,_\     __ \ \ \'/   ____    __  __    
-/\ '__\`\\ \  _ \`\   /'__\\`\   /' _ \`\\ \ \/   /'__\`\\ \ , <  /\_ ,\\`\ /\ \/\ \   
-\ \ \L\ \ \\ \ \ \ \/\ \L\.
-_ /\ \/\ \\ \ \_ /\  __/ \ \ \\\`\\/_/  /_\ \ \_\ \  
- \ \ ,__/ \ \_\ \_\\ \__/.
-_\\ \_\ \_\\ \__\\ \____\ \ \_\ \_\/\____\\/`____ \ 
-  \ \ \/   \/_/\/_/ \/__/\/_/ \/_/\/_/ \/__/ \/____/  \/_/\/\_/\/____/ \`/___/> \\
+ _____ \ \ \___       __       ___ \ \ ,_\     __ \ \ \/'\   ____    __  __    
+/\ '__`\\ \  _ `\   /'__`\   /' _ `\\ \ \/   /'__`\\ \ , <  /\_ ,`\ /\ \/\ \   
+\ \ \L\ \\ \ \ \ \ /\ \L\.\_ /\ \/\ \\ \ \_ /\  __/ \ \ \\`\\/_/  /_\ \ \_\ \  
+ \ \ ,__/ \ \_\ \_\\ \__/.\_\\ \_\ \_\\ \__\\ \____\ \ \_\ \_\/\____\\/`____ \ 
+  \ \ \/   \/_/\/_/ \/__/\/_/ \/_/\/_/ \/__/ \/____/  \/_/\/_/\/____/ `/___/> \
    \ \_\                                                                 /\___/
-    \/_/                                                                 \/__/
+    \/_/                                                                 \/__/ 
+
 `;
     const fastfetchArt = `\n[phantekzy@archlinux ~]$ fastfetch\n\n                   -\`                   phantekzy@archlinux\n                  .o+\\`                  -------------------------------\n                 \\`ooo/                  Full Name : Maini Lotfi Abdelkader\n                \`+oooo:                 Alias     : phantekzy\n               \`+oooooo:                Location  : Bir Mourad Raïs, Algiers, Algeria\n               -+oooooo+:               Age       : 28 (born 1996-09-08)\n             \`/:-:++oooo+:              Role      : Elden Lord + Web Dev + CyberSec\n            \`/++++/+++++++:             Status    : Currently exploring ArchLinux\n           \`/++++++++++++++:            WM        : Hyprland \n          \`/+++ooooooooooooo/\\`          Shell     : Zsh + Starship\n         ./ooosssso++osssssso+\\`         Editor    : Neovim (Lua)\n        .oossssso-\`\\`\\`\\`/ossssss+\\`        Terminal  : Alacritty\n       -osssssso.      :ssssssso.       Browser   : Firefox / W3M\n      :osssssss/        osssso+++.      Theme     : NerdFont + Gruvbox Dark\n     /ossssssss/        +ssssooo/-      Hobby     : AI, Linux, low-level code\n   \`/ossssso+/:-        -:/+osssso+-    Fun Fact  : Dropped Civil Engineering for Code \n  \`+sso+:-\`                 \`.-/+oso:   Motto     : "Learn. Build. Play Dark Souls. Repeat."\n \`++:.                           \`-/+/   \n .\`                                 \n\n`;
     const lines = [
