--- a/index.html
+++ b/index.html
@@ -14,12 +14,9 @@
   </style>
 </head>
 <body>
-  <div id="terminal"></div>
-  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-  <script>
-    const terminal = document.getElementById('terminal');
-    const preHeader = `        
-            __                          __             __                          
+  <div id="terminal">
+    <pre>
+         __                          __             __                          
        /\ \                        /\ \__         /\ \                         
  _____ \ \ \___       __       ___ \ \ ,_\     __ \ \ \/'\   ____    __  __    
 /\ '__`\\ \  _ `\   /'__`\   /' _ `\\ \ \/   /'__`\\ \ , <  /\_ ,`\ /\ \/\ \   
@@ -27,14 +24,36 @@
  \ \ ,__/ \ \_\ \_\\ \__/.\_\\ \_\ \_\\ \__\\ \____\ \ \_\ \_\/\____\\/`____ \ 
   \ \ \/   \/_/\/_/ \/__/\/_/ \/_/\/_/ \/__/ \/____/  \/_/\/_/\/____/ `/___/> \
    \ \_\                                                                 /\___/
-    \/_/                                                                 \/__/ 
+    \/_/  
 
-`;
-    const fastfetchArt = `\n[phantekzy@archlinux ~]$ fastfetch\n\n                   -\`                   phantekzy@archlinux\n                  .o+\\`                  -------------------------------\n                 \\`ooo/                  Full Name : Maini Lotfi Abdelkader\n                \`+oooo:                 Alias     : phantekzy\n               \`+oooooo:                Location  : Bir Mourad Raïs, Algiers, Algeria\n               -+oooooo+:               Age       : 28 (born 1996-09-08)\n             \`/:-:++oooo+:              Role      : Elden Lord + Web Dev + CyberSec\n            \`/++++/+++++++:             Status    : Currently exploring ArchLinux\n           \`/++++++++++++++:            WM        : Hyprland \n          \`/+++ooooooooooooo/\\`          Shell     : Zsh + Starship\n         ./ooosssso++osssssso+\\`         Editor    : Neovim (Lua)\n        .oossssso-\`\\`\\`\\`/ossssss+\\`        Terminal  : Alacritty\n       -osssssso.      :ssssssso.       Browser   : Firefox / W3M\n      :osssssss/        osssso+++.      Theme     : NerdFont + Gruvbox Dark\n     /ossssssss/        +ssssooo/-      Hobby     : AI, Linux, low-level code\n   \`/ossssso+/:-        -:/+osssso+-    Fun Fact  : Dropped Civil Engineering for Code \n  \`+sso+:-\`                 \`.-/+oso:   Motto     : "Learn. Build. Play Dark Souls. Repeat."\n \`++:.                           \`-/+/   \n .\`                                 \n\n`;
-    const lines = [
-      preHeader,
-      '[phantekzy@archlinux ~]$ fastfetch',
-      fastfetchArt,
+[phantekzy@archlinux ~]$ fastfetch
+
+                   -`                   phantekzy@archlinux
+                  .o+`                  -------------------------------
+                 `ooo/                  Full Name : Maini Lotfi Abdelkader
+                `+oooo:                 Alias     : phantekzy
+               `+oooooo:                Location  : Bir Mourad Raïs, Algiers, Algeria
+               -+oooooo+:               Age       : 28 (born 1996-09-08)
+             `/:-:++oooo+:              Role      : Elden Lord + Web Dev + CyberSec
+            `/++++/+++++++:             Status    : Currently exploring ArchLinux
+           `/++++++++++++++:            WM        : Hyprland 
+          `/+++ooooooooooooo/`          Shell     : Zsh + Starship
+         ./ooosssso++osssssso+`         Editor    : Neovim (Lua)
+        .oossssso-````/ossssss+`        Terminal  : Alacritty
+       -osssssso.      :ssssssso.       Browser   : Firefox / W3M
+      :osssssss/        osssso+++.      Theme     : NerdFont + Gruvbox Dark
+     /ossssssss/        +ssssooo/-      Hobby     : AI, Linux, low-level code
+   `/ossssso+/:-        -:/+osssso+-    Fun Fact  : Dropped Civil Engineering for Code 
+  `+sso+:-`                 `.-/+oso:   Motto     : "Learn. Build. Play Dark Souls. Repeat."
+ `++:.                           `-/+/   
+ .`                                 
+
+    </pre>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  <script>
+    const terminal = document.getElementById('terminal');
+    const commands = [
       '[phantekzy@archlinux ~]$ cd ~/skills/dev_stack/',
       '',
       '[phantekzy@archlinux dev_stack]$ ls -la',
@@ -65,17 +84,17 @@
       '',
       '███████████ Process terminated successfully.',
       '',
-      'Thank you for visiting PHANTEKZY's Arch terminal'
+      'Thank you for visiting PHANTEKZY\'s Arch terminal'
     ];
     async function run() {
-      for (let line of lines) {
+      for (let cmd of commands) {
         const div = document.createElement('div');
         terminal.appendChild(div);
-        await new Promise(res => new Typed(div,{strings:[line],typeSpeed: line=== '[phantekzy@archlinux ~]$ fastfetch' ? 20 : 0,showCursor:false,onComplete:res}));
+        await new Promise(res => new Typed(div, { strings: [cmd], typeSpeed: 20, showCursor: false, onComplete: res }));
         terminal.scrollTop = terminal.scrollHeight;
-        await new Promise(r=>setTimeout(r,50));
+        await new Promise(r => setTimeout(r, 100));
       }
-      const cursor = document.createElement('span'); cursor.className='cursor'; terminal.lastChild.appendChild(cursor);
+      const cursor = document.createElement('span'); cursor.className = 'cursor'; terminal.lastChild.appendChild(cursor);
     }
     run();
   </script>
