--- a/index.html
+++ b/index.html
@@ -6,12 +6,27 @@
   <title>phantekzy | Terminal Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet" />
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { background-color: #0d0d0d; color: #00ff00; font-family: 'Fira Code', monospace; overflow: hidden; }
-    /* Expand terminal to full viewport */
-    #terminal { width: 100vw; height: 100vh; padding: 40px; background: #111; white-space: pre; overflow-y: auto; }
-    .cursor { display: inline-block; width: 8px; margin-left: 2px; background: #00ff00; animation: blink 0.7s steps(1) infinite; vertical-align: bottom; }
-    @keyframes blink { 0%,100%{opacity:1;}50%{opacity:0;} }
+    /* Ensure html/body occupy full viewport */
+    html, body { height: 100%; margin: 0; padding: 0; }
+    body { background-color: #0d0d0d; color: #00ff00; font-family: 'Fira Code', monospace; }
+    /* Full-bleed terminal window */
+    #terminal {
+      width: 100%;
+      height: 100%;
+      padding: 30px;
+      background: #111;
+      white-space: pre;
+      overflow-y: auto;
+    }
+    .cursor {
+      display: inline-block;
+      width: 8px;
+      margin-left: 2px;
+      background: #00ff00;
+      animation: blink 0.7s steps(1) infinite;
+      vertical-align: bottom;
+    }
+    @keyframes blink { 0%,100% { opacity:1; } 50% { opacity:0; } }
   </style>
 </head>
 <body>
@@ -24,8 +39,7 @@
 /\ '__`\\ \  _ `\   /'__`\   /' _ `\\ \ \/   /'__`\\ \ , <  /\_ ,`\ /\ \/\ \   
 \ \ \L\ \\ \ \ \ \/\ \L\.
 _ /\ \/\ \\ \ \_ /\  __/ \ \ \\\'\\/_/  /_\ \ \_\ \  
- \ \ ,__/ \ \_\ \_\\ \__/.
-_\\ \_\ \_\\ \__\\ \____\ \ \_\ \_\/\____\\/`____ \ 
+ \ \ ,__/ \ \_\ \_\\ \__/.\n_\\ \_\ \_\\ \__\\ \____\ \ \_\ \_\/\____\\/`____ \ 
   \ \ \/   \/_/\/_/ \/__/\/_/ \/_/\/_/ \/__/ \/____/  \/_/\/\_/\/____/ `/___/> \
    \ \_\                                                                 /\___/
     \/_/                                                                 \/__/
