--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
   <div id="terminal">
     <!-- Static ASCII header -->
     <pre>
-         __                          __             __                          
+ 
+        __                          __             __                          
        /\ \                        /\ \__         /\ \                         
- _____ \ \ \___       __       ___ \ \ ,_\     __ \ \ \'/   ____    __  __    
+ _____ \ \ \___       __       ___ \ \ ,_\     __ \ \ \/'\   ____    __  __    
 /\ '__`\\ \  _ `\   /'__`\   /' _ `\\ \ \/   /'__`\\ \ , <  /\_ ,`\ /\ \/\ \   
-\ \ \L\ \\ \ \ \ \/\ \L\.
-_ /\ \/\ \\ \ \_ /\  __/ \ \ \\\'\\/_/  /_\ \ \_\ \  
- \ \ ,__/ \ \_\ \_\\ \__/.\n_\\ \_\ \_\\ \__\\ \____\ \ \_\ \_\/\____\\/`____ \ 
-  \ \ \/   \/_/\/_/ \/__/\/_/ \/_/\/_/ \/__/ \/____/  \/_/\/\_/\/____/ `/___/> \
+\ \ \L\ \\ \ \ \ \ /\ \L\.\_ /\ \/\ \\ \ \_ /\  __/ \ \ \\`\\/_/  /_\ \ \_\ \  
+ \ \ ,__/ \ \_\ \_\\ \__/.\_\\ \_\ \_\\ \__\\ \____\ \ \_\ \_\/\____\\/`____ \ 
+  \ \ \/   \/_/\/_/ \/__/\/_/ \/_/\/_/ \/__/ \/____/  \/_/\/_/\/____/ `/___/> \
    \ \_\                                                                 /\___/
-    \/_/                                                                 \/__/
+    \/_/                                                                 \/__/ 
     </pre>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
@@ -50,25 +50,26 @@ _ /\ \/\ \\ \ \_ /\  __/ \ \ \\\'\\/_/  /_\ \ \_\ \
     const terminal = document.getElementById('terminal');
     const fastfetchCmd = '[phantekzy@archlinux ~]$ fastfetch';
     const fastfetchArt = `
-              -\`                   phantekzy@archlinux
-                  .o+\`                  -------------------------------
-                 \`ooo/                  Full Name : Maini Lotfi Abdelkader
-                \`+oooo:                 Alias     : phantekzy
-               \`+oooooo:                Location  : Bir Mourad Raïs, Algiers, Algeria
+                 -`                   phantekzy@archlinux
+                  .o+`                  -------------------------------
+                 `ooo/                  Full Name : Maini Lotfi Abdelkader
+                `+oooo:                 Alias     : phantekzy
+               `+oooooo:                Location  : Bir Mourad Raïs, Algiers, Algeria
                -+oooooo+:               Age       : 28 (born 1996-09-08)
-             \`/:-:++oooo+:              Role      : Elden Lord + Web Dev + CyberSec
-            \`/++++/+++++++:             Status    : Currently exploring ArchLinux
-           \`/++++++++++++++:            WM        : Hyprland 
-          \`/+++ooooooooooooo/\`          Shell     : Zsh + Starship
-         ./ooosssso++osssssso+\`         Editor    : Neovim (Lua)
-        .oossssso-\`\`\`\`/ossssss+\`        Terminal  : Alacritty
+             `/:-:++oooo+:              Role      : Elden Lord + Web Dev + CyberSec
+            `/++++/+++++++:             Status    : Currently exploring ArchLinux
+           `/++++++++++++++:            WM        : Hyprland 
+          `/+++ooooooooooooo/`          Shell     : Zsh + Starship
+         ./ooosssso++osssssso+`         Editor    : Neovim (Lua)
+        .oossssso-````/ossssss+`        Terminal  : Alacritty
        -osssssso.      :ssssssso.       Browser   : Firefox / W3M
       :osssssss/        osssso+++.      Theme     : NerdFont + Gruvbox Dark
      /ossssssss/        +ssssooo/-      Hobby     : AI, Linux, low-level code
-   \`/ossssso+/:-        -:/+osssso+-    Fun Fact  : Dropped Civil Engineering for Code 
-  \`+sso+:-\`                 \`.-/+oso:   Motto     : "Learn. Build. Play Dark Souls. Repeat."
- \`++:.                           \`-/+/
- .\`    
+   `/ossssso+/:-        -:/+osssso+-    Fun Fact  : Dropped Civil Engineering for Code 
+  `+sso+:-`                 `.-/+oso:   Motto     : "Learn. Build. Play Dark Souls. Repeat."
+ `++:.                           `-/+/   
+ .`                                 `
+
 `;
     const commands = [
       '[phantekzy@archlinux ~]$ cd ~/skills/dev_stack/',
