--- a/index.html
+++ b/index.html
@@ -6,85 +6,55 @@
   <title>phantekzy | Terminal Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet" />
   <style>
-    /* Ensure html/body occupy full viewport */
     html, body { height: 100%; margin: 0; padding: 0; }
-    body { background-color: #0d0d0d; color: #00ff00; font-family: 'Fira Code', monospace; }
-    /* Full-bleed terminal window */
-    #terminal {
-      width: 100%;
-      height: 100%;
-      padding: 30px;
-      background: #111;
-      white-space: pre;
-      overflow-y: auto;
-    }
-    .cursor {
-      display: inline-block;
-      width: 8px;
-      margin-left: 2px;
-      background: #00ff00;
-      animation: blink 0.7s steps(1) infinite;
-      vertical-align: bottom;
-    }
+    body { background: #0d0d0d; color: #00ff00; font-family: 'Fira Code', monospace; }
+    #terminal { width: 100%; height: 100%; padding: 30px; background: #111; white-space: pre; overflow-y: auto; }
+    .cursor { display: inline-block; width: 8px; margin-left: 2px; background: #00ff00; animation: blink 0.7s steps(1) infinite; vertical-align: bottom; }
     @keyframes blink { 0%,100% { opacity:1; } 50% { opacity:0; } }
   </style>
 </head>
 <body>
   <div id="terminal">
-    <!-- Static ASCII header -->
     <pre>
- 
-        __                          __             __                          
+         __                          __             __                          
        /\ \                        /\ \__         /\ \                         
- _____ \ \ \___       __       ___ \ \ ,_\     __ \ \ \/'\   ____    __  __    
+ _____ \ \ \___       __       ___ \ \ ,_\     __ \ \ \'/   ____    __  __    
 /\ '__`\\ \  _ `\   /'__`\   /' _ `\\ \ \/   /'__`\\ \ , <  /\_ ,`\ /\ \/\ \   
-\ \ \L\ \\ \ \ \ \ /\ \L\.\_ /\ \/\ \\ \ \_ /\  __/ \ \ \\`\\/_/  /_\ \ \_\ \  
- \ \ ,__/ \ \_\ \_\\ \__/.\_\\ \_\ \_\\ \__\\ \____\ \ \_\ \_\/\____\\/`____ \ 
-  \ \ \/   \/_/\/_/ \/__/\/_/ \/_/\/_/ \/__/ \/____/  \/_/\/_/\/____/ `/___/> \
+\ \ \L\ \\ \ \ \ \/\ \L\.
+_ /\ \/\ \\ \ \_ /\  __/ \ \ \\\'\\/_/  /_\ \ \_\ \  
+ \ \ ,__/ \ \_\ \_\\ \__/.\n_\\ \_\ \_\\ \__\\ \____\ \ \_\ \_\/\____\\/`____ \ 
+  \ \ \/   \/_/\/_/ \/__/\/_/ \/_/\/_/ \/__/ \/____/  \/_/\/\_/\/____/ `/___/> \
    \ \_\                                                                 /\___/
-    \/_/                                                                 \/__/ 
+    \/_/                                                                 \/__/
     </pre>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script>
-    const terminal = document.getElementById('terminal');
+    const term = document.getElementById('terminal');
     const fastfetchCmd = '[phantekzy@archlinux ~]$ fastfetch';
     const fastfetchArt = `
-                 -`                   phantekzy@archlinux
-                  .o+`                  -------------------------------
-                 `ooo/                  Full Name : Maini Lotfi Abdelkader
-                `+oooo:                 Alias     : phantekzy
-               `+oooooo:                Location  : Bir Mourad Raïs, Algiers, Algeria
+              -\`                   phantekzy@archlinux
+                  .o+\`                  -------------------------------
+                 \`ooo/                  Full Name : Maini Lotfi Abdelkader
+                \`+oooo:                 Alias     : phantekzy
+               \`+oooooo:                Location  : Bir Mourad Raïs, Algiers, Algeria
                -+oooooo+:               Age       : 28 (born 1996-09-08)
-             `/:-:++oooo+:              Role      : Elden Lord + Web Dev + CyberSec
-            `/++++/+++++++:             Status    : Currently exploring ArchLinux
-           `/++++++++++++++:            WM        : Hyprland 
-          `/+++ooooooooooooo/`          Shell     : Zsh + Starship
-         ./ooosssso++osssssso+`         Editor    : Neovim (Lua)
-        .oossssso-````/ossssss+`        Terminal  : Alacritty
+             \`/:-:++oooo+:              Role      : Elden Lord + Web Dev + CyberSec
+            \`/++++/+++++++:             Status    : Currently exploring ArchLinux
+           \`/++++++++++++++:            WM        : Hyprland 
+          \`/+++ooooooooooooo/\`          Shell     : Zsh + Starship
+         ./ooosssso++osssssso+\`         Editor    : Neovim (Lua)
+        .oossssso-\`\`\`\`/ossssss+\`        Terminal  : Alacritty
        -osssssso.      :ssssssso.       Browser   : Firefox / W3M
       :osssssss/        osssso+++.      Theme     : NerdFont + Gruvbox Dark
      /ossssssss/        +ssssooo/-      Hobby     : AI, Linux, low-level code
-   `/ossssso+/:-        -:/+osssso+-    Fun Fact  : Dropped Civil Engineering for Code 
-  `+sso+:-`                 `.-/+oso:   Motto     : "Learn. Build. Play Dark Souls. Repeat."
- `++:.                           `-/+/   
- .`                                 `
-
+   \`/ossssso+/:-        -:/+osssso+-    Fun Fact  : Dropped Civil Engineering for Code 
+  \`+sso+:-\`                 \`.-/+oso:   Motto     : "Learn. Build. Play Dark Souls. Repeat."
+ \`++:.                           \`-/+/
+ .\`    
 `;
-    const commands = [
-      '[phantekzy@archlinux ~]$ cd ~/skills/dev_stack/',
-      '',
-      '[phantekzy@archlinux dev_stack]$ ls -la',
-      '  -rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 HTML5',
-      '  -rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 CSS3',
-      '  -rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 JavaScript',
-      '  -rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 PHP',
-      '  -rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 Node.js',
-      '  -rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 React',
-      '  -rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 MySQL',
-      '',
+    const postFilesCommands = [
       '[phantekzy@archlinux ~]$ cd ~/socials/',
-      '',
       '[phantekzy@archlinux socials]$ curl -s linkedin.com/in/maini-lotfi | grep -i "Maini Lotfi"',
       '[ OK ] Loaded LinkedIn profile',
       '[phantekzy@archlinux socials]$ curl -s x.com/mainilotfi | grep -i "Maini Lotfi"',
@@ -93,36 +63,62 @@
       '[ OK ] YouTube channel detected',
       '[phantekzy@archlinux socials]$ mail -s "Contact" mainilotfi@gmail.com',
       '[ INFO ] Opening email client...',
-      '',
       '[phantekzy@archlinux ~]$ uname -a',
       'Linux archlinux 6.9.6-arch1-1 x86_64 GNU/Linux',
-      '',
       '[phantekzy@archlinux ~]$ exit',
       'logout',
-      '',
       '███████████ Process terminated successfully.',
-      '',
       'Thank you for visiting PHANTEKZY\'s Arch terminal'
     ];
+
     async function run() {
       // animate fastfetch command
-      let div = document.createElement('div'); terminal.appendChild(div);
-      await new Promise(res => new Typed(div, { strings: [fastfetchCmd], typeSpeed: 20, showCursor: false, onComplete: res }));
-      terminal.scrollTop = terminal.scrollHeight;
+      let d = document.createElement('div'); term.appendChild(d);
+      await new Promise(r => new Typed(d, { strings: [fastfetchCmd], typeSpeed: 20, showCursor: false, onComplete: r }));
+      term.scrollTop = term.scrollHeight;
       await new Promise(r => setTimeout(r, 200));
-      // show fastfetch art without animation
-      terminal.insertAdjacentHTML('beforeend', `<pre>${fastfetchArt}</pre>`);
-      terminal.scrollTop = terminal.scrollHeight;
+
+      // static fastfetch art
+      term.insertAdjacentHTML('beforeend', `<pre>${fastfetchArt}</pre>`);
+      term.scrollTop = term.scrollHeight;
       await new Promise(r => setTimeout(r, 200));
-      // animate rest
-      for (let cmd of commands) {
-        div = document.createElement('div'); terminal.appendChild(div);
-        await new Promise(res => new Typed(div, { strings: [cmd], typeSpeed: 20, showCursor: false, onComplete: res }));
-        terminal.scrollTop = terminal.scrollHeight;
+
+      // animate cd to dev_stack
+      d = document.createElement('div'); term.appendChild(d);
+      await new Promise(r => new Typed(d, { strings: ['[phantekzy@archlinux ~]$ cd ~/skills/dev_stack/'], typeSpeed: 20, showCursor: false, onComplete: r }));
+      term.scrollTop = term.scrollHeight;
+      await new Promise(r => setTimeout(r, 100));
+
+      // animate ls -la
+      d = document.createElement('div'); term.appendChild(d);
+      await new Promise(r => new Typed(d, { strings: ['[phantekzy@archlinux dev_stack]$ ls -la'], typeSpeed: 20, showCursor: false, onComplete: r }));
+      term.scrollTop = term.scrollHeight;
+      await new Promise(r => setTimeout(r, 100));
+
+      // static file list
+      const files = [
+        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 HTML5',
+        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 CSS3',
+        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 JavaScript',
+        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 PHP',
+        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 Node.js',
+        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 React',
+        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 MySQL'
+      ];
+      term.insertAdjacentHTML('beforeend', `<pre>${files.join('\n')}</pre>`);
+      term.scrollTop = term.scrollHeight;
+      await new Promise(r => setTimeout(r, 200));
+
+      // animate remaining commands
+      for (let cmd of postFilesCommands) {
+        d = document.createElement('div'); term.appendChild(d);
+        await new Promise(r => new Typed(d, { strings: [cmd], typeSpeed: 20, showCursor: false, onComplete: r }));
+        term.scrollTop = term.scrollHeight;
         await new Promise(r => setTimeout(r, 100));
       }
+
       // blinking cursor
-      const cursor = document.createElement('span'); cursor.className = 'cursor'; terminal.lastChild.appendChild(cursor);
+      const cursor = document.createElement('span'); cursor.className = 'cursor'; term.lastChild.appendChild(cursor);
     }
     run();
   </script>
