--- a/index.html
+++ b/index.html
@@ -4,15 +4,28 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>phantekzy | Terminal Portfolio</title>
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" as="style"/>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet"/>
   <style>
+    :root {
+      --bg: #0d0d0d;
+      --fg: #00ff00;
+      --bg-light: #f5f5f5;
+      --fg-light: #007700;
+    }
     html, body { height: 100%; margin: 0; padding: 0; }
     body {
-      background: #0d0d0d;
-      color: #00ff00;
+      background: var(--bg);
+      color: var(--fg);
       font-family: 'Fira Code', monospace;
+      transition: background 0.3s, color 0.3s;
+    }
+    body.light {
+      background: var(--bg-light);
+      color: var(--fg-light);
     }
     #terminal {
+      position: relative;
       width: 100%;
       height: 100%;
       padding: 30px;
@@ -24,150 +37,129 @@
       display: inline-block;
       width: 8px;
       margin-left: 2px;
-      background: #00ff00;
-      animation: blink 0.7s steps(1) infinite;
+      background: var(--fg);
+      animation: blink 0.7s steps(1) infinite, flicker 0.1s infinite;
       vertical-align: bottom;
     }
-    @keyframes blink {
-      0%,100% { opacity:1; }
-      50% { opacity:0; }
+    @keyframes blink { 0%,100% { opacity:1; } 50% { opacity:0; } }
+    @keyframes flicker { 0%,100% { opacity: 1; } 50% { opacity: 0.85; } }
+    #controls {
+      position: fixed;
+      top: 10px;
+      right: 10px;
+      z-index: 100;
+      display: flex;
+      gap: 8px;
+    }
+    #controls button {
+      background: #222;
+      color: var(--fg);
+      border: none;
+      padding: 6px 10px;
+      cursor: pointer;
+      font-family: 'Fira Code', monospace;
+    }
+    body.light #controls button {
+      background: #ddd;
+      color: var(--fg-light);
     }
   </style>
 </head>
 <body>
-  <div id="terminal">
-    <pre>
-             __                          __             __                          
-       /\ \                        /\ \__         /\ \                         
- _____ \ \ \___       __       ___ \ \ ,_\     __ \ \ \/'\   ____    __  __    
-/\ '__`\\ \  _ `\   /'__`\   /' _ `\\ \ \/   /'__`\\ \ , <  /\_ ,`\ /\ \/\ \   
-\ \ \L\ \\ \ \ \ \ /\ \L\.\_ /\ \/\ \\ \ \_ /\  __/ \ \ \\`\\/_/  /_\ \ \_\ \  
- \ \ ,__/ \ \_\ \_\\ \__/.\_\\ \_\ \_\\ \__\\ \____\ \ \_\ \_\/\____\\/`____ \ 
-  \ \ \/   \/_/\/_/ \/__/\/_/ \/_/\/_/ \/__/ \/____/  \/_/\/_/\/____/ `/___/> \
-   \ \_\                                                                 /\___/
-    \/_/                                                                 \/__/ 
-    </pre>
+  <div id="controls">
+    <button id="themeToggle">Toggle Theme</button>
+    <button id="skip">Skip</button>
+    <button id="speedDown">-</button>
+    <button id="speedUp">+</button>
   </div>
-
+  <main role="application" aria-label="Interactive terminal portfolio">
+    <div id="terminal">
+      <div aria-live="polite" id="live"></div>
+      <pre>
+               __                          __             __                          
+         /\ \                        /\ \__         /\ \                         
+   _____ \ \ \___       __       ___ \ \ ,_\     __ \ \ \/'\   ____    __  __    
+  /\ '__`\\ \  _ `\   /'__`\   /' _ `\\ \ \/   /'__`\\ \ , <  /\_ ,`\ /\ \/\ \   
+  \ \ \L\ \\ \ \ \ \\ /\ \L\.\_ /\ \/\ \\ \ \_ /\  __/ \ \ \\`\\/_/  /_\ \ \_\ \  
+   \ \ ,__/ \ \_\ \_\\ \__/.
+      \\ \_\ \_\\ \__\\ \____\ \ \_\ \_\/\____\\/`____ \ 
+    \\ \ \/   \/_/\/_/ \/__/\/_/ \\/__/ \/____/  \/_/\/_/\/____/ `/___/> \ 
+     \\ \_\                                                                 /\___/  
+      \\/_/                                                                 \/__/   
+      </pre>
+    </div>
+  </main>
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script>
     const term = document.getElementById('terminal');
-    const fastfetchCmd = '[phantekzy@archlinux ~]$ fastfetch';
-    const fastfetchArt = `
-              -\`                   phantekzy@archlinux
-                  .o+\`                  -------------------------------
-                 \`ooo/                  Full Name : Maini Lotfi Abdelkader
-                \`+oooo:                 Alias     : phantekzy
-               \`+oooooo:                Location  : Bir Mourad Raïs, Algiers, Algeria
-               -+oooooo+:               Age       : 28 (born 1996-09-08)
-             \`/:-:++oooo+:              Role      : Elden Lord + Web Dev + CyberSec
-            \`/++++/+++++++:             Status    : Currently exploring ArchLinux
-           \`/++++++++++++++:            WM        : Hyprland 
-          \`/+++ooooooooooooo/\\\`         Shell     : Zsh + Starship
-         ./ooosssso++osssssso+\`         Editor    : Neovim (Lua)
-        .oossssso-\`\`\`\`/ossssss+\`        Terminal  : Alacritty
-       -osssssso.      :ssssssso.       Browser   : Firefox / W3M
-      :osssssss/        osssso+++.      Theme     : NerdFont + Gruvbox Dark
-     /ossssssss/        +ssssooo/-      Hobby     : AI, Linux, low-level code
-   \`/ossssso+/:-        -:/+osssso+-    Fun Fact  : Dropped Civil Engineering for Code 
-  \`+sso+:-\`                 \`.-/+oso:   Motto     : "Learn. Build. Play Dark Souls. Repeat."
- \`++:.                           \`-/+/
- .\`    
-`;
+    const live = document.getElementById('live');
+    let typeSpeed = 20;
+    let paused = false;
 
-    const postFilesCommands = [
+    const commands = [
+      '[phantekzy@archlinux ~]$ fastfetch',
+      'fastfetch output...',
+      '[phantekzy@archlinux ~]$ cd ~/skills/dev_stack/',
+      '[phantekzy@archlinux dev_stack]$ ls -la',
+      // file list block
+      'HTML5  CSS3  JavaScript  PHP  Node.js  React  MySQL',
+      // socials with spacing
       '[phantekzy@archlinux ~]$ cd ~/socials/',
       '',
-
       '[phantekzy@archlinux socials]$ curl -s linkedin.com/in/maini-lotfi | grep -i "Maini Lotfi"',
       '[ OK ] Loaded LinkedIn profile',
       '',
-
       '[phantekzy@archlinux socials]$ curl -s x.com/mainilotfi | grep -i "Maini Lotfi"',
       '[ OK ] X/Twitter feed found',
       '',
-
       '[phantekzy@archlinux socials]$ curl -s youtube.com/@phantekzy | grep -i "phantekzy"',
       '[ OK ] YouTube channel detected',
       '',
-
       '[phantekzy@archlinux socials]$ mail -s "Contact" mainilotfi@gmail.com',
       '[ INFO ] Opening email client...',
       '',
-
-      '[phantekzy@archlinux ~]$ uname -a',
-      'Linux archlinux 6.9.6-arch1-1 x86_64 GNU/Linux',
+      '[phantekzy@archlinux ~]$ date',
+      () => new Date().toString(),
       '',
-
+      '[phantekzy@archlinux ~]$ resume',
+      '[ DOWNLOAD ] Resume.pdf',
+      '',
       '[phantekzy@archlinux ~]$ exit',
       'logout',
       '',
-
       '███████████ Process terminated successfully.',
       '',
-
       'Thank you for visiting PHANTEKZY\'s Arch terminal'
     ];
 
+    // controls
+    document.getElementById('themeToggle').onclick = () => document.body.classList.toggle('light');
+    document.getElementById('skip').onclick = () => paused = true;
+    document.getElementById('speedUp').onclick = () => typeSpeed = Math.max(5, typeSpeed - 5);
+    document.getElementById('speedDown').onclick = () => typeSpeed += 5;
+
     async function run() {
-      let d = document.createElement('div'); term.appendChild(d);
-      await new Promise(r => new Typed(d, { strings: [fastfetchCmd], typeSpeed: 20, showCursor: false, onComplete: r }));
-      term.scrollTop = term.scrollHeight;
-      await new Promise(r => setTimeout(r, 200));
-
-      term.insertAdjacentHTML('beforeend', `<pre>${fastfetchArt}</pre>`);
-      term.scrollTop = term.scrollHeight;
-      await new Promise(r => setTimeout(r, 200));
-
-      d = document.createElement('div'); term.appendChild(d);
-      await new Promise(r => new Typed(d, { strings: ['[phantekzy@archlinux ~]$ cd ~/skills/dev_stack/'], typeSpeed: 20, showCursor: false, onComplete: r }));
-      term.scrollTop = term.scrollHeight;
-      await new Promise(r => setTimeout(r, 100));
-
-      d = document.createElement('div'); term.appendChild(d);
-      await new Promise(r => new Typed(d, { strings: ['[phantekzy@archlinux dev_stack]$ ls -la'], typeSpeed: 20, showCursor: false, onComplete: r }));
-      term.scrollTop = term.scrollHeight;
-      await new Promise(r => setTimeout(r, 100));
-
-      const files = [
-        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 HTML5',
-        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 CSS3',
-        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 JavaScript',
-        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 PHP',
-        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 Node.js',
-        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 React',
-        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 MySQL'
-      ];
-      term.insertAdjacentHTML('beforeend', `<pre>${files.join('\n')}</pre>`);
-      term.scrollTop = term.scrollHeight;
-      await new Promise(r => setTimeout(r, 200));
-
-      for (let cmd of postFilesCommands) {
-        if (cmd.trim() === '') {
-          const br = document.createElement('br');
-          term.appendChild(br);
+      for (let cmd of commands) {
+        if (paused) break;
+        let text = typeof cmd === 'function' ? cmd() : cmd;
+        if (text === '') {
+          term.appendChild(document.createElement('br'));
         } else {
-          const d = document.createElement('div');
-          term.appendChild(d);
-          await new Promise(r =>
-            new Typed(d, {
-              strings: [cmd],
-              typeSpeed: 20,
-              showCursor: false,
-              onComplete: r
-            })
-          );
+          const div = document.createElement('div');
+          term.appendChild(div);
+          live.textContent = text;
+          if (text.includes('Resume.pdf')) {
+            // trigger download
+            const a = document.createElement('a');
+            a.href = 'Resume.pdf'; a.download = 'Maini_Lotfi_Resume.pdf';
+            a.click();
+          }
+          await new Promise(r => new Typed(div, {
+            strings: [text],
+            typeSpeed,
+            showCursor: false,
+            onComplete: r
+          }));
         }
         term.scrollTop = term.scrollHeight;
-        await new Promise(r => setTimeout(r, 100));
-      }
-
-      const cursor = document.createElement('span');
-      cursor.className = 'cursor';
-      term.lastChild.appendChild(cursor);
-    }
-
-    run();
-  </script>
-</body>
-</html>
+        await new Promise(r => setTimeout(r, 
